# IntelliTraffic

./: LICENSE  README.md
signal-controller/: Cargo.toml  config.toml
signal-controller/src/: main.rs
smart-agent/: .gitignore  README.md  config.py  main.py  pyproject.toml  uniview.md
traffic-detector/: Cargo.toml  config.toml
traffic-detector/src/: main.rs
